<resources>
    <string name="app_name">MoneyMeter</string>
    <string name="CIButton">Сложный процент</string>
    <string name="initialAmount">Начальная сумма</string>
    <string name="endAmount">Результат</string>
    <string name="rate">Ставка</string>
    <string name="AmountHint">Сумма</string>
    <string name="income">Доход: </string>
    <string name="initialAmountHint">Введите число</string>
    <string name="reinvestmentPeriod">Период реинвестирования</string>
    <string name="ratePercent">% годовых</string>
    <string name="EnterHint1">100 000 ₽</string>
    <string name="EnterHint2">10</string>
    <string name="EnterHint3">10 %</string>
    <string name="EnterHint4">15 лет</string>
    <string-array name="reinvestmentPeriodArray">
        <item>Раз в год</item>
        <item>Раз в квартал</item>
        <item>Раз в 2 квартала</item>
        <item>Раз в месяц</item>
    </string-array>
    <string-array name="reinvestmentTermArray">
        <item>Месяц</item>
        <item>Квартал</item>
        <item>2 квартала</item>
        <item>Год</item>
    </string-array>
    <string name="additionalAttachments">Дополнительные вложения</string>
    <string name="term">Срок</string>
    <string name="cross">×</string>
    <string name="analitics">Аналитика</string>
    <string name="expectedInflation">Ожидаемая инфляция</string>
    <string name="expectedDeflation">Ожидаемая дефляция</string>
    <string name="inflation">Инфляция</string>
    <string name="deflation">Дефляция</string>
    <string name="tax">Налоги</string>
    <string name="taxRate">Налоговая ставка</string>
    <string name="taxButtontext">Вычитать из прибыли</string>
    <string name="reinvestment">Реинвестирование</string>
    <string name="donatRequisites">Карта: 5469 3801 1575\nQIWI: BUNANO</string>
    <string name="emailRequisites">По вопросам правил рассчета:\nmiron.ryb@gmail.com\n\nПожелания и отзывы:\nrybak.m.yu@gmail.com\nTelegram: @Mirongus\nVK: @bunano</string>
    <string name="donationAsk">Если вам нравится наше приложение, поддержите авторов.\nВы - наш единственный источник финансирования 💛.\n \nОставьте отзыв в Google Play, это очень поможет нам развиваться</string>
    <string name="Intest">Инвестиции</string>
    <string name="Bonds">Облигации</string>
    <string name="Stocks">Акции</string>
    <string name="Futures">Фьючерсы</string>
    <string name="Finace">Финансы</string>
    <string name="CurrencyConvenor">Конвентор валют</string>
    <string name="Credit">Кредит</string>
    <string name="Mortgage">Ипотека</string>
</resources>