<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/CIScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/MainConst"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/StartPoint"
                android:layout_width="13dp"
                android:layout_height="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/mainBarrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="end"
                app:constraint_referenced_ids="StartPoint" />

            <View
                android:id="@+id/back1"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:background="@drawable/additional_attachments_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toBottomOf="@+id/StartPoint"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                />

            <TextView
                android:id="@+id/text1"

                style="@style/TextPrimary"
                android:layout_marginTop="7dp"
                android:layout_marginStart="13dp"
                android:text="@string/initialAmount"

                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toTopOf="@id/back1" />

            <EditText
                android:id="@+id/InitAmount"

                style="@style/TextSecondary"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="26dp"
                android:layout_marginEnd="26dp"
                android:background="@drawable/edittext_form"

                android:cursorVisible="true"
                android:hint="@string/EnterHint1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="14"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/back1"
                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toBottomOf="@id/text1" />

            <View
                android:id="@+id/back2"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:layout_marginTop="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/additional_attachments_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back1" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextPrimary"

                android:text="@string/reinvestmentPeriod"
                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toTopOf="@+id/back2"
                android:layout_marginTop="7dp"
                android:layout_marginStart="13dp"
                />

            <Spinner
                android:id="@+id/spinner1"
                style="@style/TextSecondary"
                android:layout_width="200dp"
                android:layout_height="48dp"

                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_form"
                android:entries="@array/reinvestmentPeriodArray"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <View
                android:id="@+id/back3"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:layout_marginTop="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/additional_attachments_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back2" />

            <TextView
                android:id="@+id/amountText"
                style="@style/TextPrimary"
                android:layout_marginTop="7dp"
                android:layout_marginStart="13dp"
                android:text="@string/term"

                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toTopOf="@id/back3" />

            <com.google.android.material.slider.Slider
                android:id="@+id/termSlider"
                android:layout_width="220dp"
                android:layout_height="match_parent"

                android:valueFrom="1"
                android:valueTo="30"
                app:haloColor="@color/transparent"
                app:labelBehavior="gone"
                app:layout_constraintStart_toStartOf="@+id/amountText"
                app:layout_constraintTop_toBottomOf="@+id/amountText" />

            <TextView
                android:id="@+id/textTermNumber"

                style="@style/TextPrimary"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/edittext_form"

                android:gravity="center"
                android:text="0 лет"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/termSlider"
                app:layout_constraintEnd_toEndOf="@+id/back3"
                app:layout_constraintStart_toEndOf="@+id/termSlider"
                app:layout_constraintTop_toTopOf="@+id/termSlider" />

            <View
                android:id="@+id/backAdditionalAttachments"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"

                android:layout_marginEnd="13dp"
                android:background="@drawable/additional_attachments_form"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toBottomOf="@id/back4" />

            <TextView
                android:id="@+id/AdditionalAttachmentsText1"

                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"

                android:layout_marginTop="7dp"
                android:text="@string/additionalAttachments"
                app:layout_constraintStart_toStartOf="@+id/backAdditionalAttachments"
                app:layout_constraintTop_toTopOf="@+id/backAdditionalAttachments" />

            <EditText
                android:id="@+id/AdditionalAttachmentsAmount"

                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"

                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_form"
                android:cursorVisible="true"
                android:hint="@string/EnterHint1"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/backAdditionalAttachments"
                app:layout_constraintTop_toBottomOf="@+id/AdditionalAttachmentsText1" />

            <Spinner
                android:id="@+id/AdditionalAttachmentsSpinner1"

                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"


                android:background="@drawable/edittext_form"
                android:entries="@array/reinvestmentPeriodArray"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/AdditionalAttachmentsAmount"
                app:layout_constraintStart_toEndOf="@+id/AdditionalAttachmentsAmount"
                app:layout_constraintTop_toTopOf="@+id/AdditionalAttachmentsAmount" />

            <TextView
                android:id="@+id/AdditionalAttachmentsText2"

                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"

                android:layout_marginTop="7dp"
                android:text="@string/term"
                app:layout_constraintStart_toStartOf="@+id/backAdditionalAttachments"
                app:layout_constraintTop_toBottomOf="@+id/AdditionalAttachmentsAmount" />

            <EditText
                android:id="@+id/AdditionalAttachmentsTime"

                style="@style/TextSecondary"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"

                android:layout_marginTop="7dp"
                android:background="@drawable/edittext_form"
                android:cursorVisible="true"
                android:hint="@string/EnterHint2"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/backAdditionalAttachments"
                app:layout_constraintTop_toBottomOf="@+id/AdditionalAttachmentsText2" />

            <Spinner
                android:id="@+id/AdditionalAttachmentsSpinner2"

                style="@style/TextSecondary"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"

                android:background="@drawable/edittext_form"
                android:entries="@array/reinvestmentTermArray"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="@+id/AdditionalAttachmentsTime"
                app:layout_constraintStart_toEndOf="@+id/AdditionalAttachmentsTime"
                app:layout_constraintTop_toTopOf="@+id/AdditionalAttachmentsTime" />

            <Button
                android:id="@+id/plusButton"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"

                android:layout_marginEnd="13dp"
                android:background="@drawable/edittext_form"
                android:text="+"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backAdditionalAttachments"
                />

            <View
                android:id="@+id/back4"
                android:layout_width="match_parent"
                android:layout_height="100dp"

                android:layout_marginTop="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/additional_attachments_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back3" />

            <TextView
                android:id="@+id/rateText"
                style="@style/TextPrimary"
                android:layout_marginTop="7dp"
                android:layout_marginStart="13dp"
                android:text="@string/rate"

                app:layout_constraintStart_toEndOf="@id/mainBarrier"
                app:layout_constraintTop_toTopOf="@id/back4" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rateSlider"
                android:layout_width="220dp"
                android:layout_height="match_parent"

                android:valueFrom="1"
                android:valueTo="30"
                app:haloColor="@color/transparent"
                app:labelBehavior="gone"
                app:layout_constraintStart_toStartOf="@+id/rateText"
                app:layout_constraintTop_toBottomOf="@+id/rateText" />

            <TextView
                android:id="@+id/textRateNumber"

                style="@style/TextPrimary"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="7dp"
                android:background="@drawable/edittext_form"

                android:gravity="center"
                android:text="0 %"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/rateSlider"
                app:layout_constraintEnd_toEndOf="@+id/back4"
                app:layout_constraintStart_toEndOf="@+id/rateSlider"
                app:layout_constraintTop_toTopOf="@+id/rateSlider" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>